--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost/mergulhoSpring?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+# propriedade de debug no console, tem q usar fora de produção
+spring.jpa.show-sql=true
