add bean validation from jacata beans validation

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
+		<!-- Jacata Bean Validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
