--- a/pom.xml
+++ b/pom.xml
@@ -58,13 +58,19 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
-		<!-- Jacata Bean Validation -->
+		<!-- Jakata Bean Validation -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<!-- http://modelmapper.org/getting-started/ é para gerar DTO desta forma evitamos boilerPlates entre Modelos de Entidades e Modelos de Tranferencias -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.0.0</version>
+		  </dependency>
 
-		
+
 	</dependencies>
 
 	<build>
